--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="container d-flex justify-content-between anchura-f2" id="imagenes">
             <div class="imagenes" id="imagen-uno">
-                <img src="img/pickachu.png" alt="pickachu" class="imagen">
+                <img src="img/img1.png" alt="pickachu" class="imagen">
             </div>
             <div class="">
                 <div class="">
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="imagenes imagen-v" id="imagen-dos">
-                <img src="img/pickachu.png" alt="pickachu" class="imagen">
+                <img src="img/img2.png" alt="pickachu" class="imagen">
             </div>
         </div>
     </main>
