Cambio de letras

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>ANIM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -15,18 +14,16 @@
 
     <main>
         <div class="content-color text-white altura">
-            <div class="d-flex altura justify-content-between align-items-center" id="palabras">
+            <div class="d-flex altura justify-content-center align-items-center flex-wrap" id="palabras">
             </div>
         </div>
 
-        <div class="container d-flex justify-content-between anchura-f2" id="imagenes">
+        <div class="container anchura-f2" id="imagenes">
             <div class="imagenes" id="imagen-uno">
                 <img src="img/img1.png" alt="pickachu" class="imagen">
             </div>
-            <div class="">
-                <div class="">
-                    <button id="boton" class="btn btn-warning px-5 py-3 fw-bold fs-4">INICIAR</button>
-                </div>
+            <div class="d-flex justify-content-center align-items-center">
+                <button id="boton" class="btn btn-warning px-5 py-3 fw-bold fs-4">INICIAR</button>
             </div>
             <div class="imagenes imagen-v" id="imagen-dos">
                 <img src="img/img2.png" alt="pickachu" class="imagen">
